<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/edit_text_buscar"
            android:ems="10"
            android:id="@+id/editTextBuscar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonBuscar" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/button_buscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBuscar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/text_view_ciudad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCiudad" android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextBuscar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="36sp"/>
    <TextView
            android:text="@string/text_view_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDescripcion" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCiudad" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/text_view_grados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewGrados" android:layout_marginTop="128dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescripcion" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="70sp"/>
    <TextView
            android:text="@string/text_view_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEstado"
            app:layout_constraintTop_toBottomOf="@+id/textViewGrados" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:textSize="24"
            android:layout_marginTop="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMinima" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewEstado" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="128dp" android:layout_marginStart="128dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMaxima" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewEstado" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="128dp" android:layout_marginRight="128dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSensacion" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewMinima" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewHumedad"
            app:layout_constraintTop_toBottomOf="@+id/textViewSensacion" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="32dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewViento"
            app:layout_constraintTop_toBottomOf="@+id/textViewSensacion" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPresion"
            app:layout_constraintTop_toBottomOf="@+id/textViewSensacion"
            app:layout_constraintStart_toEndOf="@+id/textViewHumedad" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textViewViento"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="32dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewHumedadValor"
            app:layout_constraintTop_toBottomOf="@+id/textViewHumedad" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewVientoValor"
            app:layout_constraintTop_toBottomOf="@+id/textViewViento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:layout_marginTop="8dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPresionValor"
            app:layout_constraintTop_toBottomOf="@+id/textViewPresion"
            app:layout_constraintStart_toEndOf="@+id/textViewHumedadValor" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/textViewVientoValor"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"/>
</android.support.constraint.ConstraintLayout>